// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pending to robots from the api 1`] = `
<div
  className="tc"
>
  <div>
    <h1
      className="f1"
    >
      RoboFriends
    </h1>
    <button
      id="counter"
      onClick={[Function]}
    >
      Count: 
      0
    </button>
  </div>
  <div
    className="pa2"
  >
    <input
      aria-label="Search"
      className="pa3 ba b--green bg-lightest-blue"
      placeholder="search robots"
      type="search"
    />
  </div>
  <div
    style={
      Object {
        "border": "5px solid black",
        "height": "800px",
        "overflow": "scroll",
      }
    }
  >
    <h1>
      Loading
    </h1>
  </div>
</div>
`;

exports[`renders MainPage without crashing 1`] = `
<div
  className="tc"
>
  <div>
    <h1
      className="f1"
    >
      RoboFriends
    </h1>
    <button
      id="counter"
      onClick={[Function]}
    >
      Count: 
      0
    </button>
  </div>
  <div
    className="pa2"
  >
    <input
      aria-label="Search"
      className="pa3 ba b--green bg-lightest-blue"
      placeholder="search robots"
      type="search"
    />
  </div>
  <div
    style={
      Object {
        "border": "5px solid black",
        "height": "800px",
        "overflow": "scroll",
      }
    }
  >
    <div />
  </div>
</div>
`;
